--- a/blog/package.json
+++ b/blog/package.json
@@ -7,7 +7,7 @@
     "build": "eleventy",
     "dev": "eleventy --serve",
     "clean": "rm -rf dist",
-    "serve": "cd .. && python3 -m http.server 8080",
+    "serve": "cd .. && echo '\n🌐 Server running at http://localhost:8080\n📝 Blog: http://localhost:8080/blog/dist/\n' && python3 -m http.server 8080",
     "build:watch": "eleventy --watch"
   },
   "keywords": [
