--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "SGP Yoga website with multilingual support",
   "scripts": {
     "build:i18n": "node build-i18n.js",
+    "build:blog": "cd blog && npm run build",
+    "build": "npm run build:i18n && npm run build:blog",
     "watch:i18n": "node build-i18n.js && echo 'Watching for changes... (Ctrl+C to stop)' && fswatch -o index.html about.html classes.html events.html locales/ | xargs -n1 -I{} node build-i18n.js"
   },
   "keywords": ["yoga", "i18n", "multilingual"],
